<resources>
    <string name="app_name">Hatti</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_category">Category</string>
    <string name="menu_order">Order</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_about">about</string>
    <string name="menu_myList">My List</string>
    <string name="menu_payment_wallet">payment wallet</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_account">Account</string>


    <string name="hatti_id">Hatti Id :</string>
    <string name="gmail">Gmail</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="create_account">Create Account</string>
    <string name="back">Back</string>
    <string name="logo">logo</string>
    <string name="create_account_detail">Contact to HATTI for create account contact detail given in below. Free to make account.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="price">999</string>
    <string name="product_name">Product Name</string>
    <string name="product_image">product image</string>
    <string name="category_name">Category Name</string>
    <string name="see_all">See all</string>
    <string name="banner_image">banner image</string>
    <string name="exit">Exit</string>
    <string name="delete_button">delete button</string>
    <string name="recommended">Recommended</string>
    <string name="rupees">Rs.</string>
    <string name="product_description">product description</string>
    <string name="product_price">Price</string>
    <string name="m_r_p">M.R.P</string>
    <string name="loading">Loading..</string>
    <string name="select_product">Select Product</string>
    <string name="call">Call</string>
    <string name="msg_token_fmt">msg_token_fmt</string>
    <string name="stock">Stock</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="product_detail">Product Detail</string>
    <string name="storage_instructions">Storage Instructions</string>
    <string name="brand">Brand</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="ingredient_type">Ingredient Type</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="qty">Qty.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy">BUY</string>
    <string name="remove_all_item">Remove all Item</string>
    <string name="contact_detail">Hatti is a product suppler. Contact to any issues and problem. Contact by below methode.</string>
    <string name="contact">Contact</string>
    <string name="about_us">This e-commerce app help to Merchant for buy a good product easy and less price. This e-commerce app is a mobile application that enables users to buy products online. It offers a wide range of features that make shopping more convenient and accessible for users. These apps are designed to provide a seamless and user-friendly experience, allowing customers to browse, purchase, and track orders all from their mobile device. One of the main features of This e-commerce app is product browsing. Users can easily browse through various categories of products, search for specific items, and view detailed product descriptions, images. This allows customers to make informed purchasing decisions and find the products they need quickly and easily.

Once a user finds a product they want to purchase, they can add it to their shopping cart and proceed to checkout. This E-commerce app Provide Cash On Delevery payment options.

After completing their purchase, users can track their order and receive notifications about delivery status and estimated delivery times. This allows customers to stay informed about their order and plan for its arrival.

This app may also include additional features to enhance the user experience, such as personalized recommendations, social sharing, and loyalty programs.</string>
    <string name="weight">Weight</string>
    <string name="hatti">HATTI</string>

</resources>