<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hatti.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.hatti.fragments.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.hatti.fragments.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.hatti.fragments.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />
    <activity
        android:id="@+id/nav_Account"
        android:name="com.example.hatti.account.ProfileSetupActivity"
        android:label="@string/menu_account"
        tools:layout="@layout/activity_profile_setup"/>
    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.hatti.activity.LogOutActivity"
        android:label="@string/menu_logout"
        tools:layout="@layout/activity_log_out"/>
    <activity
        android:id="@+id/nav_contact"
        android:name="com.example.hatti.activity.ContactActivity"
        android:label="@string/menu_contact"
        tools:layout="@layout/activity_contact"/>
    <activity
        android:id="@+id/nav_about"
        android:name="com.example.hatti.activity.AboutActivity"
        android:label="@string/menu_about"
        tools:layout="@layout/activity_about"/>

</navigation>