<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    android:layout_margin="10dp"
    android:background="@drawable/product_details_bg">

    <ImageView
        android:id="@+id/ivHsProductImage"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/product_image" />

    <TextView
        android:id="@+id/tvHsItemName"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:maxLines="2"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:layout_marginBottom="4dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvHsPrice"
        app:layout_constraintEnd_toEndOf="@+id/ivHsProductImage"
        app:layout_constraintStart_toStartOf="@+id/ivHsProductImage"
        app:layout_constraintTop_toBottomOf="@+id/ivHsProductImage" />

    <TextView
        android:id="@+id/tvHsPrice"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/foreground_color"
        android:text="@string/add"
        android:textSize="12sp"
        android:padding="0dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/background_gray_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>