<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/category_item_show_bg"
    android:layout_margin="5dp"
    android:elevation="3dp"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/ivItemImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner"
        android:contentDescription="@string/product_image" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:maxLines="1"
        android:text="@string/product_name"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivItemImage"
        app:layout_constraintTop_toTopOf="@+id/ivItemImage" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/price"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/foreground_color"
        android:drawableLeft="@drawable/ic_baseline_shopping_cart_24"
        android:drawableTint="@color/background_gray_color"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/add"
        android:textColor="@color/background_gray_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivItemImage"
        app:layout_constraintStart_toStartOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:maxLines="2"
        android:text="product description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/m_r_p"
        android:textStyle="bold"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/price"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView22"
        app:layout_constraintStart_toEndOf="@+id/textView22" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#9E9E9E"
        app:layout_constraintBottom_toBottomOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textView23" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:srcCompat="@drawable/ic_baseline_delete"
        android:contentDescription="@string/delete_button" />

</androidx.constraintlayout.widget.ConstraintLayout>