<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/ivPriceListImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/item2"
        android:contentDescription="@string/product_image" />

    <TextView
        android:id="@+id/tvPriceListName"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/light_black"
        android:textStyle="bold"
        android:maxLines="3"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/product_name" />

    <TextView
        android:id="@+id/tvPriceListMrp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/price" />

    <TextView
        android:id="@+id/tvPriceListPrice"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/tvPriceListQty"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/price" />

    <TextView
        android:id="@+id/tvPriceListTotalPrice"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/light_black"
        android:text="@string/price" />
</LinearLayout>