<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.LoginActivity"
    android:orientation="vertical"
    android:background="@color/background_gray_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etHattiId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/entrybox"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="-59dp"
                android:background="@color/black"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:text="@string/hatti_id"
                android:textColor="@color/foreground_color"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/entrybox"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableEnd="@drawable/ic_baseline_visibility_24"
                android:ems="10"
                android:inputType="textPersonName"
                android:longClickable="false"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="-59dp"
                android:background="@color/black"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:text="@string/password"
                android:textColor="@color/foreground_color"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName" />
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/foreground_color"
                android:text="@string/log_in"
                android:textColor="@color/background_gray_color"
                android:layout_marginTop="90dp"
                android:textSize="14sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center">
                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/foreground_color"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="18sp"
                    android:textColor="@color/foreground_color"
                    android:layout_gravity="center"/>
                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="0dp"
                    android:background="@color/foreground_color"/>


            </LinearLayout>
            <TextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/foreground_color"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>